// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`addSubDeskSlideOver.vue > props features > hide 1`] = `
<body>
  <div>
    <!---->
  </div>
</body>
`;

exports[`addSubDeskSlideOver.vue > props features > loading 1`] = `
<body>
  <div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    id="headlessui-portal-root"
  >
    
    <div
      data-headlessui-portal=""
    >
      <div
        class="fixed inset-0 z-30 pointer-events-none add-sub-desk-slide-over"
      >
        <div
          class="absolute inset-0 overflow-hidden pointer-events-none"
        >
          <!--v-if-->
          <div
            class="fixed inset-y-0 right-0 flex max-w-full pointer-events-none"
          >
            <div
              class="translate-x-full transform transition ease-out duration-500"
            >
              <form
                class="layer-2 relative z-[38] flex h-full w-screen max-w-[calc(100vw-15rem)] flex-col overflow-hidden rounded-tl-[2rem] border border-solid border-gray-100 bg-gray-100 pointer-events-auto"
              >
                <div
                  class="slide-over__header relative mx-12 border-b border-stone-200"
                >
                  
                  <button
                    class="absolute right-[-0.5rem] top-[0.375rem] z-10 inline-flex size-12 items-center justify-center rounded-full outline-none hover:bg-stone-200"
                    type="button"
                  >
                    <span
                      class="icon-cross_thin text-[1rem] text-[#4c4c4c]"
                      data-v-206d3c28=""
                    />
                  </button>
                  <div
                    class="text-pageheading py-5 text-stone-800"
                  >
                    Create New Sub-Desk in Business
                  </div>
                  
                </div>
                <div
                  class="slide-over__body mx-12 flex-shrink flex-grow overflow-auto"
                >
                  
                  <div>
                    <div
                      class="flex justify-between py-4"
                    >
                      <!-- section title wrapper -->
                      <div
                        class="w-[17rem] pt-4"
                      >
                        <!-- title -->
                        <div
                          class="text-heading pb-4 pr-2 text-stone-800"
                        >
                          
                          Subdesk settings
                          
                        </div>
                        <!-- descriptipn -->
                        <div
                          class="text-body text-stone-500"
                        >
                          
                          The subdesk name is used in your live site for section headings and navigation.
                          
                        </div>
                      </div>
                      <!-- right hand form -->
                      
                      <div
                        class="layer-1 h-fit w-[34rem] rounded-lg bg-white p-5"
                      >
                        
                        
                        <div>
                          <div>
                            <label
                              class="text-body block text-stone-800"
                              for="input-4fzzzxjylrx"
                            >
                              Subdesk name
                            </label>
                            <div
                              class="mt-1 relative"
                            >
                              <!---->
                              <div
                                class="relative"
                              >
                                <input
                                  class="text-inputs block w-full border px-3 pb-[0.312rem] pt-1.5 focus:outline-none focus:ring-1 disabled:opacity-50 rounded-md border-stone-400 focus:border-sky-600 focus:ring-sky-600"
                                  id="input-4fzzzxjylrx"
                                  name="name"
                                  type="text"
                                />
                                <!---->
                              </div>
                              
                              <!---->
                              
                            </div>
                          </div>
                        </div>
                        <div
                          class="mt-4"
                        >
                          <div>
                            <label
                              class="text-body block text-stone-800"
                              for="input-4fzzzxjylrx"
                            >
                              Subdesk description
                            </label>
                            <div
                              class="mt-1 relative"
                            >
                              <!---->
                              <div
                                class="relative"
                              >
                                <input
                                  class="text-inputs block w-full border px-3 pb-[0.312rem] pt-1.5 focus:outline-none focus:ring-1 disabled:opacity-50 rounded-md border-stone-400 focus:border-sky-600 focus:ring-sky-600"
                                  id="input-4fzzzxjylrx"
                                  name="description"
                                  type="text"
                                />
                                <!---->
                              </div>
                              
                              <!---->
                              
                            </div>
                          </div>
                        </div>
                        
                        
                      </div>
                      
                    </div>
                  </div>
                  
                </div>
                <div
                  class="slide-over__footer flex items-center border-t border-solid bg-white px-6 pb-[0.688rem] pt-[0.562rem]"
                >
                  
                  <button
                    class="text-button inline-flex h-9 items-center justify-center rounded px-4 py-2.5 focus:outline-none bg-stone-200 text-stone-500 cursor-not-allowed"
                    data-v-a52d93de=""
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="flex flex-col items-center absolute"
                      data-v-a52d93de=""
                    >
                      <img
                        class="w-5 animate-spin"
                        src="data:image/svg+xml,%3csvg%20width='64'%20height='64'%20viewBox='0%200%2064%2064'%20xmlns='http://www.w3.org/2000/svg'%3e%3cpath%20d='M3.776%2036.545c2.21%2013.55%2013.97%2023.89%2028.143%2023.89%2015.75%200%2028.516-12.767%2028.516-28.516%200-10.667-5.857-19.967-14.531-24.857.08-.148.687-1.176%202.33-1.566%201.293-.205%202.458.421%202.458.421a20.09%2020.09%200%200%200-.639-.465C58.48%2011.239%2064%2020.934%2064%2031.919%2064%2049.637%2049.637%2064%2031.92%2064%2017.188%2064%204.776%2054.072%201.01%2040.543c.053.17.104.331.153.482%200%200-.566-1.862%201.151-3.503.446-.36.943-.612%201.491-.756zM34.751%203.54l.214.023c-1-.106-2.017-.16-3.046-.16-3.02%200-5.93.468-8.66%201.338A27.522%2027.522%200%200%201%2034.75%203.541z'%20fill='%23047857'%20fill-rule='nonzero'/%3e%3c/svg%3e"
                      />
                      <!---->
                    </div>
                    <span
                      class="invisible flex items-center justify-center"
                      data-v-a52d93de=""
                    >
                      
                       Create new desk 
                      
                    </span>
                  </button>
                  
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`addSubDeskSlideOver.vue > props features > show 1`] = `
<body>
  <div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <div
    id="headlessui-portal-root"
  >
    
    <div
      data-headlessui-portal=""
    >
      <div
        class="fixed inset-0 z-30 add-sub-desk-slide-over"
      >
        <div
          class="absolute inset-0 overflow-hidden"
        >
          <div
            class="opacity-0 ease-out duration-500"
          >
            <div
              class="absolute inset-0"
            />
          </div>
          <div
            class="fixed inset-y-0 right-0 flex max-w-full"
          >
            <div
              class="translate-x-full transform transition ease-out duration-500"
            >
              <form
                class="layer-2 relative z-[38] flex h-full w-screen max-w-[calc(100vw-15rem)] flex-col overflow-hidden rounded-tl-[2rem] border border-solid border-gray-100 bg-gray-100"
              >
                <div
                  class="slide-over__header relative mx-12 border-b border-stone-200"
                >
                  
                  <button
                    class="absolute right-[-0.5rem] top-[0.375rem] z-10 inline-flex size-12 items-center justify-center rounded-full outline-none hover:bg-stone-200"
                    type="button"
                  >
                    <span
                      class="icon-cross_thin text-[1rem] text-[#4c4c4c]"
                      data-v-206d3c28=""
                    />
                  </button>
                  <div
                    class="text-pageheading py-5 text-stone-800"
                  >
                    Create New Sub-Desk in Business
                  </div>
                  
                </div>
                <div
                  class="slide-over__body mx-12 flex-shrink flex-grow overflow-auto"
                >
                  
                  <div>
                    <div
                      class="flex justify-between py-4"
                    >
                      <!-- section title wrapper -->
                      <div
                        class="w-[17rem] pt-4"
                      >
                        <!-- title -->
                        <div
                          class="text-heading pb-4 pr-2 text-stone-800"
                        >
                          
                          Subdesk settings
                          
                        </div>
                        <!-- descriptipn -->
                        <div
                          class="text-body text-stone-500"
                        >
                          
                          The subdesk name is used in your live site for section headings and navigation.
                          
                        </div>
                      </div>
                      <!-- right hand form -->
                      
                      <div
                        class="layer-1 h-fit w-[34rem] rounded-lg bg-white p-5"
                      >
                        
                        
                        <div>
                          <div>
                            <label
                              class="text-body block text-stone-800"
                              for="input-4fzzzxjylrx"
                            >
                              Subdesk name
                            </label>
                            <div
                              class="mt-1 relative"
                            >
                              <!---->
                              <div
                                class="relative"
                              >
                                <input
                                  class="text-inputs block w-full border px-3 pb-[0.312rem] pt-1.5 focus:outline-none focus:ring-1 disabled:opacity-50 rounded-md border-stone-400 focus:border-sky-600 focus:ring-sky-600"
                                  id="input-4fzzzxjylrx"
                                  name="name"
                                  type="text"
                                />
                                <!---->
                              </div>
                              
                              <!---->
                              
                            </div>
                          </div>
                        </div>
                        <div
                          class="mt-4"
                        >
                          <div>
                            <label
                              class="text-body block text-stone-800"
                              for="input-4fzzzxjylrx"
                            >
                              Subdesk description
                            </label>
                            <div
                              class="mt-1 relative"
                            >
                              <!---->
                              <div
                                class="relative"
                              >
                                <input
                                  class="text-inputs block w-full border px-3 pb-[0.312rem] pt-1.5 focus:outline-none focus:ring-1 disabled:opacity-50 rounded-md border-stone-400 focus:border-sky-600 focus:ring-sky-600"
                                  id="input-4fzzzxjylrx"
                                  name="description"
                                  type="text"
                                />
                                <!---->
                              </div>
                              
                              <!---->
                              
                            </div>
                          </div>
                        </div>
                        
                        
                      </div>
                      
                    </div>
                  </div>
                  
                </div>
                <div
                  class="slide-over__footer flex items-center border-t border-solid bg-white px-6 pb-[0.688rem] pt-[0.562rem]"
                >
                  
                  <button
                    class="text-button inline-flex h-9 items-center justify-center rounded px-4 py-2.5 text-white bg-primary hover:bg-emerald-900 transition-colors duration-200 focus:ring-emerald-500 focus:outline-none focus:ring-2 focus:ring-offset-2"
                    data-v-a52d93de=""
                    type="submit"
                  >
                    <!---->
                    <span
                      class="flex items-center justify-center"
                      data-v-a52d93de=""
                    >
                      
                       Create new desk 
                      
                    </span>
                  </button>
                  
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</body>
`;
